syntax = "proto3";

option java_multiple_files = true;
option java_package = "nam.cse.tlu.partner.grpc";
option java_outer_classname = "PartnerProto";

service PartnerService {
  rpc confirmPayment (PartnerConfirmRequest)
      returns (PartnerConfirmResponse);
}

message PartnerConfirmRequest {
  string tokenKey = 1;
  string apiID = 2;
  string bankCode = 3;
  string accountNo = 4;
  int64 debitAmount = 5;
  string traceTransfer = 6;
  string orderCode = 7;
  string messageType = 8;
  string checkSum = 9;
  string addValue = 10;
}

message PartnerConfirmResponse {
  string respCode = 1;
  string respDesc = 2;
  bool accepted = 3;
}
